--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "portfolio de vinicius dias",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node_modules/nodemon/bin/nodemon.js app"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "http-errors": "^1.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
