--- a/new/gatsby-starter-default/package.json
+++ b/new/gatsby-starter-default/package.json
@@ -10,9 +10,9 @@
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby-transformer-sharp": "^2.3.14",
     "minireset.css": "^0.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -24,6 +24,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "prettier": "^1.19.1"
   },
   "keywords": [
