--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "http-errors": "^1.7.3"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "nodemon": "^1.19.2"
   }
 }
