--- a/new/gatsby-starter-default/package.json
+++ b/new/gatsby-starter-default/package.json
@@ -19,9 +19,11 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-particles-js": "^2.7.1",
     "react-slick": "^0.25.2",
     "react-tabs": "^3.1.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "use-dencrypt-effect": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
