--- a/new/gatsby-starter-default/package.json
+++ b/new/gatsby-starter-default/package.json
@@ -5,13 +5,18 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
+    "gatsby-image": "^2.2.41",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-mdx": "^1.0.74",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-source-graphql": "^2.1.33",
     "gatsby-transformer-sharp": "^2.3.14",
     "minireset.css": "^0.0.6",
     "prop-types": "^15.7.2",
@@ -23,6 +28,7 @@
     "react-slick": "^0.25.2",
     "react-tabs": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.0.1",
     "use-dencrypt-effect": "^1.0.2"
   },
   "devDependencies": {
