--- a/package.json
+++ b/package.json
@@ -1,22 +1,58 @@
 {
-  "name": "curriculo",
-  "version": "1.0.0",
-  "description": "portfolio de vinicius dias",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node_modules/nodemon/bin/nodemon.js app"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "gatsby-starter-default",
+  "private": true,
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
-    "http-errors": "^1.7.3",
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.19.7",
+    "gatsby-image": "^2.2.41",
+    "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-mdx": "^1.0.74",
+    "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-source-graphql": "^2.1.33",
+    "gatsby-transformer-sharp": "^2.3.15",
+    "minireset.css": "^0.0.6",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
+    "react-particles-js": "^2.7.1",
+    "react-slick": "^0.25.2",
+    "react-tabs": "^3.1.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.0.1",
     "use-dencrypt-effect": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.18.3",
-    "nodemon": "^1.19.2"
+    "prettier": "^1.19.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
