--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.41",
+    "gatsby-plugin-anchor-links": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-mdx": "^1.0.74",
     "gatsby-plugin-offline": "^3.0.32",
@@ -22,9 +23,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-particles-js": "^2.7.1",
+    "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
     "react-tabs": "^3.1.0",
     "slick-carousel": "^1.8.1",
