--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@mdx-js/mdx": "^1.5.7",
     "@mdx-js/react": "^1.5.7",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.19.7",
+    "gatsby": "^2.19.39",
+    "gatsby-cli": "^2.10.7",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-anchor-links": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.39",
@@ -18,11 +19,11 @@
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-source-graphql": "^2.1.33",
-    "gatsby-transformer-sharp": "^2.3.15",
+    "gatsby-transformer-sharp": "^2.3.18",
     "minireset.css": "^0.0.6",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
