--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-cli": "^2.10.7",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-anchor-links": "^1.1.0",
+    "gatsby-plugin-google-analytics": "^2.1.38",
     "gatsby-plugin-manifest": "^2.2.47",
     "gatsby-plugin-mdx": "^1.0.74",
     "gatsby-plugin-offline": "^3.0.32",
