--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.5.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.39",
+    "gatsby-background-image": "^0.10.2",
     "gatsby-cli": "^2.10.7",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-anchor-links": "^1.1.0",
