--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-starter-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A starter for a blog powered by Gatsby and Markdown",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.7",
-    "@mdx-js/react": "^1.5.7",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.19.39",
-    "gatsby-background-image": "^0.10.2",
-    "gatsby-cli": "^2.10.7",
-    "gatsby-image": "^2.2.41",
-    "gatsby-plugin-anchor-links": "^1.1.0",
-    "gatsby-plugin-google-analytics": "^2.1.38",
-    "gatsby-plugin-manifest": "^2.2.47",
-    "gatsby-plugin-mdx": "^1.0.74",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-source-graphql": "^2.1.33",
-    "gatsby-transformer-sharp": "^2.3.18",
+    "@mdx-js/mdx": "^1.5.8",
+    "@mdx-js/react": "^1.5.8",
+    "gatsby": "^2.20.25",
+    "gatsby-image": "^2.3.4",
+    "gatsby-plugin-feed": "^2.4.3",
+    "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.3.5",
+    "gatsby-plugin-mdx": "^1.1.9",
+    "gatsby-plugin-offline": "^3.1.4",
+    "gatsby-plugin-react-helmet": "^3.2.4",
+    "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-typography": "^2.4.3",
+    "gatsby-remark-copy-linked-files": "^2.2.3",
+    "gatsby-remark-images": "^3.2.4",
+    "gatsby-remark-responsive-iframe": "^2.3.3",
+    "gatsby-remark-smartypants": "^2.2.3",
+    "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-transformer-remark": "^2.7.3",
+    "gatsby-transformer-sharp": "^2.4.6",
     "minireset.css": "^0.0.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-hamburger-menu": "^1.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-hamburger-menu": "^1.2.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
-    "react-particles-js": "^2.7.1",
-    "react-router-dom": "^5.1.2",
-    "react-slick": "^0.25.2",
-    "react-tabs": "^3.1.0",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^5.0.1",
-    "use-dencrypt-effect": "^1.0.2"
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1"
+    "prettier": "2.0.4"
   },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
+  "main": "n/a",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+  },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -54,12 +58,5 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
