--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-mdx": "^1.1.9",
     "gatsby-plugin-netlify": "^2.2.3",
+    "gatsby-plugin-next-seo": "^1.4.0",
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
@@ -34,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-hamburger-menu": "^1.2.1",
     "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.5",
     "react-icons": "^3.9.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
