--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
     "gatsby-plugin-feed": "^2.4.3",
     "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-mdx": "^1.1.9",
     "gatsby-plugin-netlify": "^2.2.3",
     "gatsby-plugin-next-seo": "^1.4.0",
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-typography": "^2.4.3",
     "gatsby-remark-copy-linked-files": "^2.2.3",
@@ -28,6 +30,7 @@
     "gatsby-remark-responsive-iframe": "^2.3.3",
     "gatsby-remark-smartypants": "^2.2.3",
     "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-theme-localization": "^1.5.0",
     "gatsby-transformer-remark": "^2.7.3",
     "gatsby-transformer-sharp": "^2.4.6",
     "minireset.css": "^0.0.6",
