--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
+    "axios": "^0.19.2",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
@@ -34,6 +35,7 @@
     "gatsby-transformer-remark": "^2.7.3",
     "gatsby-transformer-sharp": "^2.4.6",
     "minireset.css": "^0.0.6",
+    "polished": "^3.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hamburger-menu": "^1.2.1",
@@ -41,6 +43,7 @@
     "react-helmet-async": "^1.0.5",
     "react-icons": "^3.9.0",
     "react-typography": "^0.16.19",
+    "styled-components": "^5.1.0",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
