--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
     "gatsby-plugin-feed": "^2.4.3",
+    "gatsby-plugin-google-amp": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.2.4",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.3.5",
@@ -22,8 +23,10 @@
     "gatsby-plugin-netlify": "^2.2.3",
     "gatsby-plugin-next-seo": "^1.4.0",
     "gatsby-plugin-offline": "^3.1.4",
+    "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.6",
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-typography": "^2.4.3",
     "gatsby-remark-copy-linked-files": "^2.2.3",
